<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical">

    <NumberPicker
        android:id="@+id/ano"
        android:layout_width="398dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/acao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/acao"
        android:layout_width="396dp"
        android:layout_height="39dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ano">

        <RadioButton
            android:id="@+id/acao_adicionar"
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:text="@string/add_radio_button" />

        <RadioButton
            android:id="@+id/acao_remover"
            android:layout_width="211dp"
            android:layout_height="37dp"
            android:text="@string/remove_radio_button" />

    </RadioGroup>

    <EditText
        android:id="@+id/value"
        android:layout_width="397dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/value"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/value_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acao" />

    <TextView
        android:id="@+id/value_txt"
        android:layout_width="395dp"
        android:layout_height="32dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:text="@string/value_example"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="399dp"
        android:layout_height="49dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="366dp"
        android:text="@string/apply_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>